fixed footer alignment

--- a/style.css
+++ b/style.css
@@ -253,6 +253,9 @@ img{
     font-size: .8em;
 }
 .footer__container{
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     row-gap: 2rem;
 }
 .footer__data{
